# gobelo_grammar_toolkit

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  pyproject.toml  vt.bat  vt.ps1
docs/: GGT_Connection_Guide (1).md  GGT_Deployment_Guide.md  GGT_HFST_Installation_Setup_Guide.odt  GGT_Implementation_Plan.md  GGT_Multi_Platform_Deployment_Prompt.docx  GGT_Teacher_Training_Manual.docx  GGT_Tokenizer_Guide (2).md  GGT_Tokenizer_Guide.md  GGT_Tokenizer_Interactive_Guide.html  GOBELO_INTEGRATION_GUIDE.md  Gobelo_Grammar_Toolkit_User_Guide.docx  bantu_grammar_generation_prompt_v2.md  ggt_ferature_prompt_p2.md  ggt_project_structure.docx  ggt_user_guide.docx  gobelo_frontend_prompt.md  guidelines.md  phase1-to_2.md  project_structure.md  prompts_yaml format.yml
gcbt/: corpus_config.yaml  gcbt_user_manual.odt  gcbt_v40.py
ggt/: __init__.py  rename_yamls.sh
ggt/apps/: paradigm_generator.py  ud_feature_mapper.py  verb_slot_validator.py
ggt/core/: config.py
ggt/hfst/: build_fst.py
ggt/languages/: chinyanja.yaml
gobelo-v2/: package.json  vite.config.js
gobelo-v2/scripts/: verify.mjs
gobelo-v2/src/: App.jsx
gobelo_grammar_toolkit/apps/: __init__.py  corpus_annotator.py  feature_comparator.py  morphological_analyzer.py
gobelo_grammar_toolkit/cli/: ggt_cli.py
gobelo_grammar_toolkit/core/: __init__.py  exceptions.py  normalizer.py  registry.py  validator.py
gobelo_grammar_toolkit/hfst/: hfst_backend.py
gobelo_grammar_toolkit/languages/: canonical_grammar_template.yaml  chibemba.yaml  chinyanja.md  chitonga.yaml  kaonde.yaml  lunda.yaml  luvale.yaml  silozi.yaml
gobelo_poster/: GobелоPlatform.jsx  app.py  boundary_issue.py  requirements.txt  tammaker.py  test1.py
gobelo_poster/conjugator/: Implementing prompt with chitonga.yaml schema - Claude.html  __init__.py  engine.py  grammar_data.py  morphophonology.py
gobelo_poster/demo/: zambia_languages_verb_poster.html
gobelo_poster/frontend/: package-lock.json  package.json
gobelo_poster/templates/: index.html
gobelo_poster/word_bank/: __init__.py  chibemba.yaml  chinyanja.yaml  chitonga.yaml  cikaonde.yaml  cilunda.yaml  ciluvale.yaml  loader.py  silozi.yaml
pipeline/: agreement_chain.py  annotation_pipeline.py  ggt_loader_adapter.py  models.py  models_bak.py  morph_analyser.py  output_writers.py  pos_tagger.py  word_tokenizer.py
scripts/: add_language.py  build_hfst.sh  validate_grammar.py
tests/: conftest.py
tests/fixtures/: minimal_chitonga.yaml  stub_chibemba.yaml
tests/gcbt/: test_gcbt_v40.py
tests/integration/: test_apps_chitonga.py  test_backend_routes.py
tests/phase1/: test_phase1.py
tests/phase2/: test_phase2.py
tests/phase3/: test_phase3_pos_tagger.py
tests/phase4/: test_phase4_output_writers.py
tests/phase5/: test_phase3_and_phase5.py
tests/phase6/: test_phase6_agreement_chain.py
tests/unit/: test_all_languages.py  test_loader_chitonga.py
utils/: analyze_pytest_errors.py  clean_yaml_keys.py  init_gobelo.py  language_registry.py  notes.md  test_analysis.py
web/: requirements.txt
web/admin/: index_v1.html  vite.config.js
web/admin_bak/: index.html  index_v2.html
web/backend/: app.py  bootstrap.py  cache.py  requirements.txt  serializers.py
web/frontend/: index.html  package-lock.json  package.json  (+1 more)
(+79 files in other folders)
